[package]
name = "meplang"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/makcandrov/meplang"
homepage = "https://github.com/makcandrov/meplang"
description = "An EVM low-level language that gives full control over the control flow of the smart contract."
license = "GPL-3.0"
keywords = ["crypto", "ethereum"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
bytes = "1.5.0"
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
indexmap = "2.1.0"
enum-impl = "0.1"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
