[package]
name = "meplang"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/makcandrov/meplang"
homepage = "https://github.com/makcandrov/meplang"
documentation = "https://docs.rs/meplang"
description = "An EVM low-level language that gives full control over the control flow of the smart contract."
license = "MIT OR Apache-2.0"
keywords = ["crypto", "ethereum"]

[dependencies]
pest = "2"
pest_derive = "2"
bytes = "1.5"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
indexmap = "2.1"
quick-impl = "0.1"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
